<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (c) 2026 Muhammed Ali Bulut, All rights reserved.
  ~
  ~ See LICENSE file in repository root for copy file of license. For copyright
  ~ notices, technical issues, feedback, or any other related to this code file or
  ~ project, please contact me via mamii@mamii.dev or other ways.
  -->

<!--
  ~ (c) 2026 Muhammed Ali Bulut, All rights reserved.
  ~
  ~ See LICENSE file in repository root for copy file of license. For copyright
  ~ notices, technical issues, feedback, or any other related to this code file or
  ~ project, please contact me via mamii@mamii.dev or other ways.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/info"
        android:title="@string/status"/>

    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/logs"
        android:title="@string/logs"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
</menu>
