<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (c) 2026 Muhammed Ali Bulut, All rights reserved.
  ~
  ~ See LICENSE file in repository root for copy file of license. For copyright
  ~ notices, technical issues, feedback, or any other related to this code file or
  ~ project, please contact me via mamii@mamii.dev or other ways.
  -->

<!--
  ~ (c) 2026 Muhammed Ali Bulut, All rights reserved.
  ~
  ~ See LICENSE file in repository root for copy file of license. For copyright
  ~ notices, technical issues, feedback, or any other related to this code file or
  ~ project, please contact me via mamii@mamii.dev or other ways.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_info">

    <fragment
        android:id="@+id/nav_info"
        android:name="dev.mamii.instafel.updater.fragments.InfoFragment"
        android:label="@string/status"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="dev.mamii.instafel.updater.fragments.LogsFragment"
        android:label="@string/logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="dev.mamii.instafel.updater.fragments.SettingsFragment"
        android:label="@string/settings" />

</navigation>
